@@ -31,6 +31,10 @@ commands:
     description: lookup a player
     aliases: [lup]
     usage: /<command> <playername>
+  banlookup:
+    description: lookup a player
+    aliases: [blup]
+    usage: /<command> <banID>
   mcbans:
     description: mcbans functions
     usage: /<command> <function>
@@ -65,6 +69,9 @@ permissions:
   mcbans.kick:
     description: Permission to use kick command
     default: op
-  mcbans.lookup:
+  mcbans.lookup.player:
     description: Permission to use lookup command
+    default: op
+  mcbans.lookup.ban:
+    description: Permission to use banlookup command
     default: op
